--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <h1>Valentine Protocol v1.2 <span class="tag" id="statusTag">STATUS: pending</span></h1>
       <p class="sub">
         Dear Wife,<br/>
-        My dearest and loving wife, will you do me the honor of being my Valentine? Te amo muucho!.<br/>
+        My dearest and loving wife, will you do me the honor of being my Valentine? Te amo muuuuuuuuucho!.<br/>
         (If "No" is clicked, the program might get mad and want to fight.)
       </p>
 
