Update link preview title and add Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Valentine Protocol</title>
+  <title>Valentines - Your mission should you choose to accept it</title>
+  <meta property="og:title" content="Valentines - Your mission should you choose to accept it" />
+  <meta property="og:description" content="You have been summoned. Please respond accordingly." />
+  <meta property="og:type" content="website" />
   <style>
     *{ box-sizing: border-box; margin: 0; }
     html{
